# goit-pycore-hw-group-project

./: .gitignore  AGENTS.md  LICENSE  Makefile  PROJECT_PLAN.md  README.md  pyproject.toml
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/workflows/: ci.yml
docs/: FINAL_PROJECT.md  FINAL_PROJECT_DESC.md  create-presentation.js  pitch-deck.pptx
example/: topic12_task1.py
personal_assistant/: main.py  storage.py  utils.py
personal_assistant/handlers/: contact_handlers.py  note_handlers.py
personal_assistant/models/: address_book.py  fields.py  note.py  note_book.py  record.py
tests/: conftest.py  test_address_book.py  test_e2e.py  test_fields.py  test_handlers.py  test_note.py  test_note_book.py  test_record.py  test_storage.py
