[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "personal-assistant"
version = "1.0.0"
description = "Personal assistant CLI for managing contacts and notes"
license = { file = "LICENSE" }
requires-python = ">=3.12"

[project.optional-dependencies]
dev = [
    "pytest",
    "mypy",
    "ruff",
]

[project.scripts]
assistant = "personal_assistant.main:main"

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
